--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
             <option value="Portugues">Português</option>
             <option value="Historia">História</option>
             <option value="Ciencias">Ciências</option>
+            <option value="Geografia">Geografia</option>
+            <option value="Artes">Artes</option>
+            <option value="EducacaoFisica">Educação Física</option>
+            <option value="Ingles">Inglês</option>
+            <option value="EnsinoReligioso">Ensino Religioso</option>
         </select><br><br>
 
         <button onclick="mostrarIdentificacao()">Enviar</button>
