--- a/index.html
+++ b/index.html
@@ -20,12 +20,19 @@
         ul {
             margin-top: 20px;
         }
+        #saudacao {
+            margin-top: 20px;
+            padding: 15px;
+            background-color: #e0f7fa;
+            border-left: 5px solid #0097a7;
+        }
     </style>
 </head>
 <body>
 
     <h1>Formulário - Identificação do Aluno (6º Ano)</h1>
 
+    <!-- Formulário -->
     <form id="formulario">
         <label for="nome">Nome do aluno:</label>
         <input type="text" id="nome" required placeholder="Digite seu nome">
@@ -48,52 +55,18 @@
         <button type="submit">Salvar</button>
     </form>
 
+    <!-- Saudação -->
+    <div id="saudacao" style="display: none;">
+        <h2>Olá, <span id="nomeSaudacao"></span>!</h2>
+        <p>Você escolheu a matéria: <strong><span id="materiaSaudacao"></span></strong>.</p>
+    </div>
+
     <h2>Registros Salvos:</h2>
     <ul id="lista-registros"></ul>
 
     <script>
         const formulario = document.getElementById("formulario");
         const listaRegistros = document.getElementById("lista-registros");
-
-        // Função para atualizar a lista exibida
-        function atualizarLista() {
-            listaRegistros.innerHTML = ""; // Limpa a lista
-            const registros = JSON.parse(localStorage.getItem("alunos")) || [];
-
-            registros.forEach((registro, index) => {
-                const li = document.createElement("li");
-                li.textContent = `${registro.nome} - ${registro.materia}`;
-                listaRegistros.appendChild(li);
-            });
-        }
-
-        // Evento de envio do formulário
-        formulario.addEventListener("submit", function(event) {
-            event.preventDefault(); // Impede recarregar a página
-
-            const nome = document.getElementById("nome").value.trim();
-            const materia = document.getElementById("materia").value;
-
-            if (nome === "" || materia === "") {
-                alert("Preencha todos os campos.");
-                return;
-            }
-
-            const novoRegistro = { nome, materia };
-
-            // Pega os registros anteriores e adiciona o novo
-            const registros = JSON.parse(localStorage.getItem("alunos")) || [];
-            registros.push(novoRegistro);
-
-            localStorage.setItem("alunos", JSON.stringify(registros));
-
-            formulario.reset(); // Limpa o formulário
-            atualizarLista(); // Atualiza a lista de registros
-        });
-
-        // Carrega os dados salvos ao abrir a página
-        atualizarLista();
-    </script>
-
-</body>
-</html>
+        const saudacaoDiv = document.getElementById("saudacao");
+        const nomeSaudacao = document.getElementById("nomeSaudacao");
+        const materiaSaudacao = document.getElementById
